# downloader-server

./: .gitignore  Cargo.toml  README.md  dotenv.example
src/: main.rs
src/handlers/: htmls.rs  mod.rs
src/structs/: general.rs
static/: index.html
static/website/: style.css
