[package]
name = "aseman-downloader-server"
version = "0.1.0"
authors = ["Aseman <aseman.land@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
actix-web = {version = "3", features = ["openssl"]}
actix-files = "0.4.0"
serde = "1.0.116"
serde_json = "1.0"
handlebars = { version = "4.1.4", features = ["dir_source"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
